--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,5 +1,5 @@
-$theme-color-dark: #060657;
-$theme-color-light: #0044a2;
+$theme-color-dark: #010136;
+$theme-color-light: #3280f3;
 
 html{
   width: 100%;
