--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,6 @@
 $theme-color-dark: #010136;
 $theme-color-light: #3280f3;
-$anti-theme-color: #b1f54b;
+$anti-theme-color: #dcd87d;
 
 html{
   width: 100%;
