--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,7 +9,7 @@ html{
 
 body{
   margin: 0;
-  font-family: cursive, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Avenir, Helvetica, Arial, sans-serif;
   font-style: normal;
   font-variant: small-caps;
   font-size: 150%;
