changes from matte & lalla

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,6 @@
-$theme-color-dark: #010136;
-$theme-color-light: #3280f3;
-$anti-theme-color: #dcd87d;
+$theme-color-dark: #16ff00;
+$theme-color-light: #0026e7;
+$anti-theme-color: #ffffff;
 
 html{
   width: 100%;
