--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,6 +1,6 @@
-$theme-color-dark: #16ff00;
-$theme-color-light: #0026e7;
-$anti-theme-color: #ffffff;
+$theme-color-dark: black;
+$theme-color-light: black;
+$anti-theme-color: white;
 
 html{
   width: 100%;
