--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,7 @@
 $theme-color-dark: black;
 $theme-color-light: black;
-$papero-color-dark: #86e970;
-$papero-color-light: #4abf6f;
+$papero-color-dark: orange;
+$papero-color-light: orange;
 
 html{
   width: 100%;
